--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,11 @@
                 <div class="container">
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
+                            <a href="{{ url_for('index') }}" class="navbar-item">
                                 Home
                             </a>
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
+                            <a href="{{ url_for('profile') }}" class="navbar-item">
                                 Profile
                             </a>
                             {% endif %}
